# nocturnal

./: .gitignore  .nocturnal.toml  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  askama.toml  justfile
.claude/commands/: triage.md
.github/workflows/: ci.yml
.nocturnal/: prompt-extra.md
prompts/: implement.md  proposal-review.md  review.md
src/: activity.rs  backend.rs  claude.rs  config.rs  git.rs  lock.rs  main.rs  preflight.rs  project_config.rs  prompt.rs  td.rs  usage.rs  util.rs  vcs.rs
src/commands/: foreach.rs  gc.rs  implement.rs  init.rs  loop_cmd.rs  mod.rs  proposal_review.rs  proposal_review_rotate.rs  review.rs  rotate.rs  rotation.rs  run.rs  web.rs
src/static/css/: styles.css
src/web/: filters.rs  handlers.rs  helpers.rs  markdown.rs  mod.rs  models.rs  templates.rs
src/web_templates/: dashboard.html  issue.html  layout.html  project.html  project_error.html
src/web_templates/partials/: filters.html  issue_table.html  issue_table_error.html  kanban_board.html  table_wrapper.html
