[package]
name = "nocturnal"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
ammonia = "4"
anyhow = "1"
libc = "0.2"
axum = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
askama = "0.12"
pulldown-cmark = "0.12"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
